--- a/CssTask/grid.css
+++ b/CssTask/grid.css
@@ -12,13 +12,18 @@ main{
     place-items: center;
 }
 
-nav {
-    padding: 2rem;
-    text-align: center;
+.nav {
+    margin-left: auto;
+    width: fit-content;
 }
 
-nav a{
-    color: orangered;
+.nav-list {
+    display: flex;
+    gap: 2em;
+}
+
+.active {
+    color: var(--bright-orange);
 }
 
 .grid-container{
