--- a/Responsive_and _media_quary/style.css
+++ b/Responsive_and _media_quary/style.css
@@ -14,7 +14,7 @@ body{
     padding: 0;
     margin: 0;
     font-size: 16px;
-    background-image: url(/bg-intro-desktop.jpg);
+    background-image: url(./bg-intro-desktop.jpg);
     background-color: var(--Red);
     color: #fff;
     font-family: 'Poppins', sans-serif;
